--- a/TaskApp/Base.lproj/Main.storyboard
+++ b/TaskApp/Base.lproj/Main.storyboard
@@ -48,10 +48,10 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="Sd8-pY-Fij" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="IwT-O7-QLh"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Sd8-pY-Fij" secondAttribute="trailing" id="azq-Uu-iEV"/>
-                            <constraint firstItem="Sd8-pY-Fij" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="fZh-ix-n6T"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Sd8-pY-Fij" secondAttribute="bottom" id="xqi-J7-bk2"/>
+                            <constraint firstItem="Sd8-pY-Fij" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="5fc-yZ-bkK"/>
+                            <constraint firstItem="Sd8-pY-Fij" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="PQ7-vp-LvT"/>
+                            <constraint firstItem="Sd8-pY-Fij" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ep9-ig-i3w"/>
+                            <constraint firstItem="Sd8-pY-Fij" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="kOz-Sz-k1y"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -91,13 +91,13 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NLd-aA-ko2">
-                                <rect key="frame" x="10" y="173" width="394" height="21"/>
+                                <rect key="frame" x="10" y="248" width="394" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="5Ec-HQ-dI3">
-                                <rect key="frame" x="10" y="204" width="394" height="120"/>
+                                <rect key="frame" x="10" y="279" width="394" height="120"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="7Ib-k7-iqQ"/>
@@ -108,34 +108,52 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="tN2-yC-dmF">
-                                <rect key="frame" x="0.0" y="334" width="414" height="120"/>
+                                <rect key="frame" x="10" y="409" width="414" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="KYx-eT-SdU"/>
                                 </constraints>
                             </datePicker>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="カテゴリー" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ec7-PH-9Dg">
+                                <rect key="frame" x="10" y="173" width="394" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="v1z-Cd-tD8">
+                                <rect key="frame" x="10" y="204" width="394" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="BD7-1V-NZa" firstAttribute="trailing" secondItem="NLd-aA-ko2" secondAttribute="trailing" constant="10" id="25h-12-ylo"/>
-                            <constraint firstItem="5Ec-HQ-dI3" firstAttribute="top" secondItem="NLd-aA-ko2" secondAttribute="bottom" constant="10" id="4BX-6W-mgf"/>
-                            <constraint firstItem="iDY-Zm-oWA" firstAttribute="leading" secondItem="BD7-1V-NZa" secondAttribute="leading" constant="10" id="5Id-oq-YsA"/>
-                            <constraint firstItem="tN2-yC-dmF" firstAttribute="leading" secondItem="BD7-1V-NZa" secondAttribute="leading" id="C79-6y-T0J"/>
-                            <constraint firstItem="NLd-aA-ko2" firstAttribute="leading" secondItem="BD7-1V-NZa" secondAttribute="leading" constant="10" id="JPU-Hc-G5v"/>
-                            <constraint firstItem="iDY-Zm-oWA" firstAttribute="top" secondItem="BD7-1V-NZa" secondAttribute="top" constant="10" id="NMV-Pe-oNn"/>
-                            <constraint firstItem="tN2-yC-dmF" firstAttribute="trailing" secondItem="BD7-1V-NZa" secondAttribute="trailing" id="SMN-uN-eq7"/>
-                            <constraint firstItem="5Ec-HQ-dI3" firstAttribute="leading" secondItem="BD7-1V-NZa" secondAttribute="leading" constant="10" id="d4f-qJ-pZK"/>
-                            <constraint firstItem="tN2-yC-dmF" firstAttribute="top" secondItem="5Ec-HQ-dI3" secondAttribute="bottom" constant="10" id="d9b-Mo-pwj"/>
-                            <constraint firstItem="BD7-1V-NZa" firstAttribute="trailing" secondItem="Vpq-wa-pKb" secondAttribute="trailing" constant="10" id="dDL-VU-fqJ"/>
-                            <constraint firstItem="NLd-aA-ko2" firstAttribute="top" secondItem="Vpq-wa-pKb" secondAttribute="bottom" constant="10" id="eOT-vX-5DM"/>
-                            <constraint firstItem="Vpq-wa-pKb" firstAttribute="leading" secondItem="BD7-1V-NZa" secondAttribute="leading" constant="10" id="eba-dd-YRQ"/>
-                            <constraint firstItem="BD7-1V-NZa" firstAttribute="trailing" secondItem="iDY-Zm-oWA" secondAttribute="trailing" constant="10" id="ewx-b4-uLJ"/>
-                            <constraint firstItem="BD7-1V-NZa" firstAttribute="trailing" secondItem="5Ec-HQ-dI3" secondAttribute="trailing" constant="10" id="mkc-zc-s6Q"/>
-                            <constraint firstItem="Vpq-wa-pKb" firstAttribute="top" secondItem="iDY-Zm-oWA" secondAttribute="bottom" constant="10" id="uaI-ix-T25"/>
+                            <constraint firstItem="Vpq-wa-pKb" firstAttribute="top" secondItem="iDY-Zm-oWA" secondAttribute="bottom" constant="10" id="465-hT-bbG"/>
+                            <constraint firstItem="BD7-1V-NZa" firstAttribute="trailing" secondItem="iDY-Zm-oWA" secondAttribute="trailing" constant="10" id="7mN-E4-bNh"/>
+                            <constraint firstItem="v1z-Cd-tD8" firstAttribute="top" secondItem="ec7-PH-9Dg" secondAttribute="bottom" constant="10" id="9RR-A9-j5O"/>
+                            <constraint firstItem="BD7-1V-NZa" firstAttribute="trailing" secondItem="Vpq-wa-pKb" secondAttribute="trailing" constant="10" id="FAi-q8-vYz"/>
+                            <constraint firstItem="BD7-1V-NZa" firstAttribute="trailing" secondItem="5Ec-HQ-dI3" secondAttribute="trailing" constant="10" id="FxZ-Jc-LCw"/>
+                            <constraint firstItem="tN2-yC-dmF" firstAttribute="trailing" secondItem="BD7-1V-NZa" secondAttribute="trailing" constant="10" id="Gz7-OG-AQC"/>
+                            <constraint firstItem="NLd-aA-ko2" firstAttribute="leading" secondItem="BD7-1V-NZa" secondAttribute="leading" constant="10" id="M89-oy-Bf6"/>
+                            <constraint firstItem="NLd-aA-ko2" firstAttribute="top" secondItem="v1z-Cd-tD8" secondAttribute="bottom" constant="10" id="U0h-a8-mEd"/>
+                            <constraint firstItem="BD7-1V-NZa" firstAttribute="trailing" secondItem="NLd-aA-ko2" secondAttribute="trailing" constant="10" id="c9k-Ou-DbZ"/>
+                            <constraint firstItem="BD7-1V-NZa" firstAttribute="trailing" secondItem="ec7-PH-9Dg" secondAttribute="trailing" constant="10" id="eGI-ZT-k7X"/>
+                            <constraint firstItem="ec7-PH-9Dg" firstAttribute="leading" secondItem="BD7-1V-NZa" secondAttribute="leading" constant="10" id="eOi-ja-q7o"/>
+                            <constraint firstItem="iDY-Zm-oWA" firstAttribute="top" secondItem="BD7-1V-NZa" secondAttribute="top" constant="10" id="em0-Ei-H6y"/>
+                            <constraint firstItem="BD7-1V-NZa" firstAttribute="trailing" secondItem="v1z-Cd-tD8" secondAttribute="trailing" constant="10" id="fWN-XW-b8G"/>
+                            <constraint firstItem="tN2-yC-dmF" firstAttribute="leading" secondItem="BD7-1V-NZa" secondAttribute="leading" constant="10" id="fsM-Xa-8hf"/>
+                            <constraint firstItem="5Ec-HQ-dI3" firstAttribute="top" secondItem="NLd-aA-ko2" secondAttribute="bottom" constant="10" id="gYW-Ra-8nz"/>
+                            <constraint firstItem="ec7-PH-9Dg" firstAttribute="top" secondItem="Vpq-wa-pKb" secondAttribute="bottom" constant="10" id="nWM-ce-5Oj"/>
+                            <constraint firstItem="iDY-Zm-oWA" firstAttribute="leading" secondItem="BD7-1V-NZa" secondAttribute="leading" constant="10" id="ots-tS-UEP"/>
+                            <constraint firstItem="v1z-Cd-tD8" firstAttribute="leading" secondItem="BD7-1V-NZa" secondAttribute="leading" constant="10" id="sUg-hv-MSA"/>
+                            <constraint firstItem="tN2-yC-dmF" firstAttribute="top" secondItem="5Ec-HQ-dI3" secondAttribute="bottom" constant="10" id="uXY-XU-dgA"/>
+                            <constraint firstItem="5Ec-HQ-dI3" firstAttribute="leading" secondItem="BD7-1V-NZa" secondAttribute="leading" constant="10" id="wdO-CI-Dap"/>
+                            <constraint firstItem="Vpq-wa-pKb" firstAttribute="leading" secondItem="BD7-1V-NZa" secondAttribute="leading" constant="10" id="yTk-eS-FZf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="BD7-1V-NZa"/>
                     </view>
                     <navigationItem key="navigationItem" id="c9y-kd-mH9"/>
                     <connections>
+                        <outlet property="categoryTextField" destination="v1z-Cd-tD8" id="xg3-cC-Try"/>
                         <outlet property="contentsTextView" destination="5Ec-HQ-dI3" id="uNc-3S-HxK"/>
                         <outlet property="datePicker" destination="tN2-yC-dmF" id="xRt-nx-kcF"/>
                         <outlet property="titleTextField" destination="Vpq-wa-pKb" id="R5X-5z-XuZ"/>
